# Colos_Android_Game

./: BUILD.md  Game-functions.c  Map-Editor.html  OpenGLES-instancing.html  Physics_videos.txt  README.md  WindowProc_win32_key_remap.c  app.apk  glfw3_glew_custom_Cursor_concept.cpp  gosha_math.h  gosha_objects.h  main_colo.cpp  nicegame.cpp  nicegame41.cpp  rebuild3_glfw9.cpp  sprite.vs  sprite140.fs  sprite140.vs  stb_truetype_sample2_2.cpp  texture_map10.dds  trianglegame4.cpp  trianglegame5.cpp  trianglegame6.cpp  trianglegame7.cpp  vao_multiple_text46.cpp
MacOS/: Metal1.shaders  Renderer.cpp  Renderer.hpp  RendererAdapter.h  RendererAdapter.mm  metal.shaders  shader2.metal
MacOSColoGame1/: ColoEngine.cpp  Renderer.hpp  colo_engine.cpp  colo_engine.h
MultiplayerTutorial/: prompt1.txt
assets/: texture_map.dds
colo_engine/loadtexture/: loadtexture.cpp  loadtexture.h  stb_image_impl.cpp
colo_engine/math/: gosha_math2.h
colo_engine/shaders/: colo_uber_Shader.cpp  (+1 more)
endless_Android/: CMakeLists.txt  android_main.cpp  colo_engine.cpp  colo_engine.cpp_bk  colo_engine.h  common.hpp  engine.hpp  input_util.cpp  input_util.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  ui_scene.cpp  ui_scene.hpp  welcome_scene.cpp  welcome_scene.hpp
endless_Android/assets/: Quad1shader.frag  Quad1shader.vert
endless_Android/colo_context/: asset_shader_loader.cpp  asset_shader_loader.h  quad_renderer.cpp  quad_renderer.h  quad_shader.cpp  quad_shader.h
endless_Android/colo_engine3/perpective_camera/: perpective_camera.cpp  perpective_camera.h
(+12 files in other folders)
